@@ -31,11 +31,11 @@ dependencies {
   implementation 'com.typesafe:config:1.3.4'
   implementation 'org.bushe:eventbus:1.4'
   implementation 'org.fxmisc.easybind:easybind:1.0.3'
-  implementation 'org.mbari:mbarix4j:1.10.0'
+  implementation 'org.mbari:mbarix4j:2.0.2.jre11'
   implementation 'org.mbari.vcr4j:vcr4j-core:4.0.2'
   implementation 'org.mbari.vcr4j:vcr4j-sharktopoda:4.0.2'
-  implementation 'org.slf4j:slf4j-api:1.7.26'
-  runtimeOnly 'ch.qos.logback:logback-classic:1.2.3'
+  implementation 'org.slf4j:slf4j-api:2.0.0-alpha0'
+  runtimeOnly 'ch.qos.logback:logback-classic:1.3.0-alpha4'
   runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc:7.4.1.jre11'
   runtimeOnly 'javax.servlet:javax.servlet-api:4.0.1' // needed by logback
   testImplementation 'junit:junit:4.12'
@@ -63,12 +63,7 @@ javafx {
 }
 
 def runtimeJvmArgs = [
-        '-Xms1g',
-        '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix',
-        '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=com.jfoenix',
-        '--add-exports', 'javafx.base/com.sun.javafx.binding=com.jfoenix',
-        '--add-exports', 'javafx.graphics/com.sun.javafx.stage=com.jfoenix',
-        '--add-exports', 'javafx.base/com.sun.javafx.event=com.jfoenix'
+        '-Xms1g'
 ]
 
 def confEnvParams = [
